# flask_evaluation_service

./: .gitignore  app.py  main.py  package-lock.json  package.json  pyproject.toml  serverless.yml  test_app.py
data/: comment.py
